- fix for bug #26947 Crash by using DomDocument::getElementById()

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@149110 c90b9560-bf6c-de11-be94-00142212c4b1